Added note to `REMOVE` docs explaining that removing a resource also removes its contents

--- a/app/templates/docs/surrealql/statements/remove.hbs
+++ b/app/templates/docs/surrealql/statements/remove.hbs
@@ -6,9 +6,10 @@
 </Crumb>
 
 <Layout::Text text-l text-f>
-    <h2><code>REMOVE</code> statement</h2>
+	<h2><code>REMOVE</code> statement</h2>
 	<p>
-		The REMOVE statement is used to remove resources such as databases, tables, indexes, events and more.<br>
+		The REMOVE statement is used to remove resources such as databases, tables, indexes, events and more.
+		When a resource is removed, its contents are also deleted.<br>
 		Similar to a SQL DROP statement.
 	</p>
 </Layout::Text>
